feat(MAT-321): cấu hình system prompt và xử lý AI Vision chuyển đổi Canvas Latex